# castle-api-app

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
.github/workflow/: main.yaml
.github/workflows/: main.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: area.ts  atom.ts  data_set.tsx  map.tsx  map_loading.tsx  util.ts
src/lib/: firebase.ts
src/pages/: _app.tsx  completion.tsx  index.tsx  report.tsx  submit.tsx
src/styles/: completion_view.module.scss  data_set.module.scss  data_view.module.scss  globals.scss  index.module.scss  report.module.scss  submit.module.scss
src/view/: completion_view.tsx  data_set.tsx  data_set_loading.tsx  data_view.tsx  map.tsx  report_view.tsx  submit_map.tsx
